objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>CMPL123__ExternalDataFieldName__c</fullName>
        <label>ExternalDataFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__ExternalFileId__c</fullName>
        <label>ExternalFileId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__ExternalFileUpdateTime__c</fullName>
        <label>ExternalFileUpdateTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>